--- a/manvsclass/src/main/resources/static/uploadClasse.html
+++ b/manvsclass/src/main/resources/static/uploadClasse.html
@@ -248,7 +248,7 @@ function uploadFile(event) {
   .then(response => response.json())
   .then(data => {
     console.log('Success:', data);
-	window.location.href = "/home.html";
+	window.location.href = "/home_adm.html";
     // Aggiungi qui il codice per gestire la risposta dal server
   })
   .catch((error) => {
