--- a/manvsclass/src/main/resources/static/Reports.html
+++ b/manvsclass/src/main/resources/static/Reports.html
@@ -176,37 +176,9 @@ a:hover {
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript">
-var parametro = location.search.split('parametro=')[1];
-var stringa_metodo;
-if(typeof parametro == "undefined" )
-{
-  stringa_metodo='/home';
-}
-else
-{
-	stringa_metodo='/home/'+parametro;
-   switch(parametro) {
-  case '1':
-    stringa_metodo='/orderbydate';
-    break;
-  case '2':
-    stringa_metodo='/orderbyname';
-    break;
-  case '3':
-    stringa_metodo='/Dfilterby/Beginner';
-    break;
-	case '4':
-    stringa_metodo='/Dfilterby/Intermediate';
-    break;
-	case '5':
-    stringa_metodo='/Dfilterby/Advanced';
-    break;
-  default:
-    break;
-}
-}
 
-    fetch(stringa_metodo)
+
+    fetch('/findreport')
         .then(response => response.json())
         .then(data => {
             let classutList = document.getElementById('classut-list');
@@ -215,53 +187,27 @@ else
                 rows += `									
 				
 <div class="col-lg-3 col-md-4 col-sm-12">
-<div class="card" onmouseover="getLikes('${home.name}')"" >
+<div class="card"  >
 <div class="file">
 <a href="javascript:void(0);">
-<div class="hover">
 
-<button type="button" class="btn btn-light" onclick="window.location.href='modificaClasse.html?parametro=${home.name}'">
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-    <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"></path>
-  </svg>
-</button>
-<button type="button" onclick="eliminaClasse('${home.name}')" class="btn btn-icon btn-danger">
-<i class="fa fa-trash"></i>
-</button>
-</button>
-</div>
 <br>
 <div class="icon">
-<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-earmark-fill text-info" viewBox="0 0 16 16">
-  <path d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm5.5 1.5v2a1 1 0 0 0 1 1h2l-3-3z"></path>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-envelope-exclamation-fill text-danger" viewBox="0 0 16 16">
+  <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 4.697v4.974A4.491 4.491 0 0 0 12.5 8a4.49 4.49 0 0 0-1.965.45l-.338-.207L16 4.697Z"/>
+  <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm.5-5v1.5a.5.5 0 0 1-1 0V11a.5.5 0 0 1 1 0Zm0 3a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Z"/>
 </svg>
 <br><br>
 </div>
 <div class="file-name">
-<p class="m-b-5 text-muted">${home.name}.java</p>
-
-<small class="date text-muted">${home.description}  </small>
-
-
-
-<small class="date text-success">${home.difficulty}<span class="date text-muted">${home.date}</span></small>
-
-<center><span class="badge badge-info">${home.category[0]}</span> <span class="badge badge-info">${home.category[1]}</span> <span class="badge badge-info">${home.category[2]}</span> </center>
-<center><span>
-<br>
-
-<button type="button" onclick="downloadFile('${home.name}')"  class="btn btn-success btn-sm">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"></path>
-</svg>
-                Download
-                           </button>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <span id="${home.name}" class="text-danger" ></span>
-<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  fill="currentColor" class="bi bi-heart text-danger" viewBox="0 0 16 16">
-  <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"></path>
-</svg>
-
-
- </span><center>
+<p class="m-b-7 text-dark font-weight-bold">Email utente:</p>
+<p class="m-b-7 text-dark">${home.email}</p>
+<p class="m-b-7 text-dark font-weight-bold">Nome classe:</p>
+<p class="m-b-7 text-dark">${home.name}.java</p>
+<p class="m-b-7 text-dark font-weight-bold">Descrizione:</p>
+<p class="m-b-6 text-danger font-italic">${home.commento} </p>
+<p class="m-b-3 text-muted font-italic">${home.date} </p>
 </div>
 </a>
 </div>
@@ -298,71 +244,6 @@ else
 		
 	
 	
-<script>
 
-
-
-
-function getLikes(name) {
-  const endpoint = '/getLikes/'+name; // URL dell'endpoint API
-
-  return fetch(endpoint)
-    .then(response => response.text())
-    .then(data => {
-      console.log(data); // log del risultato della chiamata API
-	  document.getElementById(name).innerHTML=data;
-	   //document.write("<h1>Questo è un messaggio sulla pagina HTML.</h1>");
-      return data; // restituisce il risultato della chiamata API
-    })
-    .catch(error => console.error(error)); // gestione degli errori
-}
-
-
-
-
-function downloadFile(name) {
-  fetch('/downloadFile/' + name)
-    .then(response => response.blob())
-    .then(blob => {
-      var link = document.createElement('a');
-      link.href = window.URL.createObjectURL(blob);
-      link.download = name+'.java';
-      link.click();
-    })
-    .catch(error => console.error(error));
-}
-
-
-function eliminaClasse(name) {
-  fetch(`/delete/${name}`, {
-    method: 'POST'
-  })
-  .then(response => {
-    if (!response.ok) {
-      throw new Error('Errore durante l\'eliminazione della classe.');
-    }
-    // gestisci la risposta del server
-    location.reload();
-  })
-  .catch(error => console.error(error));
-}
-
-
-function newLike(name) {
-  fetch(`/newlike/${name}`, {
-    method: 'POST'
-  })
-  .then(response => {
-    if (!response.ok) {
-      throw new Error('Errore durante il like.');
-    }
-    // gestisci la risposta del server
-    location.reload();
-  })
-  .catch(error => console.error(error));
-}
-
-
-</script>
 </body>
 </html>
